--- a/OOP/Views/Default/Index.cshtml
+++ b/OOP/Views/Default/Index.cshtml
@@ -5,6 +5,7 @@
 
 <a href="/Default/Urunler/">Ürünler Sayfası</a>
 <a href="/Default/Musteriler/">Musteriler Sayfası</a>
+<a href="/Default/Deneme/">Deneme Sayfası</a>
 
 
 <h1>Mesaj Listesi</h1>
